--- a/RM_/Supporting Files/Storyboards/Main.storyboard
+++ b/RM_/Supporting Files/Storyboards/Main.storyboard
@@ -28,6 +28,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
